# picovcf

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  IGD.FORMAT.md  LICENSE  README.md  format-check.sh  format.sh  picovcf.hpp
.github/workflows/: cmake-multi-platform.yml
doc/: conf.py  igd_api.rst  igd_overview.rst  igdtools.rst  index.rst  vcf_api.rst
examples/: gzcat.cpp  igd_flip.cpp  igd_with_meta.cpp  igdcp.cpp  igdpp.cpp  igdroh.cpp  vcfconv.cpp  vcfpp.cpp
igdtools/: .gitignore  CANONICAL.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  RELEASING.md  igdtools.cpp  package.sh  setup.py
igdtools/igdtools/: main.py
test/: test_helpers.cpp  test_igd.cpp  test_main.cpp  test_rotate.cpp  test_valid_vcf.cpp  test_variant_view.cpp
test/endtoend/: run_tests.py
test/endtoend/expected/: multi.dropped_sites.af.txt  multi.only_snv_sites.af.txt  multi.only_snvs.af.txt
test/example_vcfs/: contigs.vcf  haploid.example.vcf  missing.vcf  mixploidy.example.vcf  msprime.example.vcf  unphased.example.vcf  vcf42.example.vcf
